--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     ]
   },
   "devDependencies": {
+    "@nteract/core": "^6.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -205,6 +206,8 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0",
+    "@nteract/messaging": "^4.0.1",
+    "@nteract/transforms": "^4.3.0",
     "ajv": "^6.5.3",
     "babel-runtime": "^6.26.0",
     "d3": "^5.5.0",
@@ -214,6 +217,7 @@
     "hazardous": "^0.3.0",
     "history": "^4.7.2",
     "jspsych-react": "git+https://github.com/makebrainwaves/jspsych-react.git",
+    "kernelspecs": "^2.0.0",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "mousetrap": "^1.6.2",
@@ -237,6 +241,7 @@
     "semantic-ui-react": "^0.81.1",
     "simplify-js": "^1.2.3",
     "source-map-support": "^0.5.3",
+    "spawnteract": "^4.0.0",
     "ws": "^5.2.0"
   },
   "devEngines": {
