Added node pyodide install script

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "package-all": "npm run build && build -mwl",
     "package-linux": "npm run build && build --linux",
     "package-win": "npm run build && build --win --x64",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && node -r babel-register internals/scripts/InstallPyodide.js",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.js'",
     "precommit": "lint-staged",
     "prestart": "npm run build",
@@ -129,7 +129,6 @@
     ]
   },
   "devDependencies": {
-    "@nteract/core": "^6.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -177,6 +176,7 @@
     "flow-bin": "^0.72.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.4.0",
+    "gunzip-maybe": "^1.4.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.0.0",
@@ -188,6 +188,7 @@
     "prettier": "^1.12.1",
     "react-test-renderer": "^16.4.0",
     "redux-logger": "^3.0.6",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "sinon": "^5.0.10",
@@ -196,18 +197,17 @@
     "stylefmt": "^6.0.0",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0",
+    "tar-fs": "^2.0.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.28.4",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0",
-    "@nteract/messaging": "^4.0.1",
-    "@nteract/transforms": "^4.3.0",
     "ajv": "^6.5.3",
     "babel-runtime": "^6.26.0",
     "d3": "^5.5.0",
@@ -217,7 +217,6 @@
     "hazardous": "^0.3.0",
     "history": "^4.7.2",
     "jspsych-react": "git+https://github.com/makebrainwaves/jspsych-react.git",
-    "kernelspecs": "^2.0.0",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "mousetrap": "^1.6.2",
@@ -241,7 +240,6 @@
     "semantic-ui-react": "^0.81.1",
     "simplify-js": "^1.2.3",
     "source-map-support": "^0.5.3",
-    "spawnteract": "^4.0.0",
     "ws": "^5.2.0"
   },
   "devEngines": {
