--- a/package.json
+++ b/package.json
@@ -176,7 +176,6 @@
     "flow-bin": "^0.72.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.4.0",
-    "gunzip-maybe": "^1.4.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.0.0",
@@ -199,6 +198,7 @@
     "stylelint-config-standard": "^18.2.0",
     "tar-fs": "^2.0.0",
     "uglifyjs-webpack-plugin": "1.2.5",
+    "unbzip2-stream": "^1.3.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.28.4",
     "webpack-bundle-analyzer": "^2.13.1",
